@@ -55,26 +55,27 @@ public class ImpServicioEmpleado implements IServicio<CrearEmpleadoDTO,SalidaEmp
 
 
     @Override
-    public void modificar(Long id, CrearEmpleadoDTO empleadoModificar) throws Exception{
+    public void modificar(Long id, CrearEmpleadoDTO empleadoModificar) throws Exception {
 
-        Empleado empleadoEncontrado=repo.buscarPorID(id);
-        if(empleadoEncontrado==null){
+        Empleado empleadoExistente = repo.buscarPorID(id);
+        if (empleadoExistente == null) {
             throw new PersonaNoEncontradaException("Error, la persona no existe");
         }
 
-        if(!validacion.correoEsValido(empleadoModificar.empleadoEmail())){
+        if (!validacion.correoEsValido(empleadoModificar.empleadoEmail())) {
             throw new CorreoNoValidoException("El nuevo correo no es valido");
         }
-        if(!empleadoModificar.empleadoContrasenia().trim().isEmpty()){
-            empleadoEncontrado.setEmpleadoContrasenia(empleadoModificar.
-                    empleadoContrasenia().trim());
-        }
-        if(!empleadoModificar.telefono().trim().isEmpty()){
-            empleadoEncontrado.setTelefono(empleadoEncontrado.getTelefono().trim());
+
+        empleadoExistente.setEmpleadoEmail(empleadoModificar.empleadoEmail());
+
+        if (empleadoModificar.empleadoContrasenia() != null && !empleadoModificar.empleadoContrasenia().isBlank()) {
+            empleadoExistente.setEmpleadoContrasenia(empleadoModificar.empleadoContrasenia().trim());
         }
 
-        Empleado empleadoModificado = mapperEmpleado.EmpleadoDTOAEmpleado(empleadoModificar, empleadoEncontrado.getId());
+        if (empleadoModificar.telefono() != null && !empleadoModificar.telefono().isBlank()) {
+            empleadoExistente.setTelefono(empleadoModificar.telefono().trim());
+        }
 
+        repo.guardar(empleadoExistente);
     }
-
 }
